--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -8,24 +8,27 @@
     <header class="container">
       <div class="row align-items-center">
           <div class="col-auto">
-              <img src="images/terrabytes-logo.png" alt="Logo" style="max-width: 20vw; max-height: 200px;">
+              <img src="images/laug-hsmi-logo.png" alt="Logo" style="max-width: 20vw; max-height: 200px;">
           </div>
           <div class="col" style="max-width: 75w;">
-              <h1 class="display-4 section-title">TerraBytes - Towards global datasets and models for Earth Observation</h1>
-              <h3><img src="https://icml.cc/static/core/img/icml-navbar-logo.svg" style='max-height: 2rem;margin-right: 1rem;'/>ICML 2025 Workshop</h3>
-              <h5>18/19 July 2025 - Vancouver, Canada</h5>
+              <h1 class="display-4 section-title">LaugHSMI: Laughter, Humour, Smiles in Multimodal Interactions </h1>
+              <h3>
+                <!-- <img src="https://icml.cc/static/core/img/icml-navbar-logo.svg" style='max-height: 2rem;margin-right: 1rem;'/> -->
+                ICMI 2026 Workshop
+              </h3>
+              <h5>TBA - Naples, Italy</h5>
           </div>
       </div>
       
       <!-- Organisation Logos Section -->
-      <div class="d-flex flex-wrap justify-content-center align-items-center mt-4">
-          <img src="images/esa-logo.png" alt="ESA Logo" style="max-height: 80px; height: auto; object-fit: contain; margin-right: 20px; margin-top:10px;" />
-          <img src="images/KTH.png" alt="KTH Logo" style="max-height: 60px; height: auto; object-fit: contain; margin-right: 20px;" />
-          <img src="images/logo-lastig.png" alt="LASTIG Logo" style="max-height: 50px; height: auto; object-fit: contain; margin-right: 20px; margin-top:10px;" />
-          <img src="images/logo-cnam.svg" alt="CNAM Logo" style="max-height: 80px; height: auto; object-fit: contain; margin-right: 20px; margin-top:10px;" />
-          <img src="images/university-of-chile.png" alt="University of Chile Logo" style="max-height: 60px; height: auto; object-fit: contain; margin-right: 20px; margin-top:10px;" />
-          <img src="images/logo-asterisk.png" alt="Asterisk Labs Logo" style="max-height: 45px; height: auto; object-fit: contain;" />
-      </div>
+      <!-- <div class="d-flex flex-wrap justify-content-center align-items-center mt-4"> -->
+      <!--     <img src="images/esa-logo.png" alt="ESA Logo" style="max-height: 80px; height: auto; object-fit: contain; margin-right: 20px; margin-top:10px;" /> -->
+      <!--     <img src="images/KTH.png" alt="KTH Logo" style="max-height: 60px; height: auto; object-fit: contain; margin-right: 20px;" /> -->
+      <!--     <img src="images/logo-lastig.png" alt="LASTIG Logo" style="max-height: 50px; height: auto; object-fit: contain; margin-right: 20px; margin-top:10px;" /> -->
+      <!--     <img src="images/logo-cnam.svg" alt="CNAM Logo" style="max-height: 80px; height: auto; object-fit: contain; margin-right: 20px; margin-top:10px;" /> -->
+      <!--     <img src="images/university-of-chile.png" alt="University of Chile Logo" style="max-height: 60px; height: auto; object-fit: contain; margin-right: 20px; margin-top:10px;" /> -->
+      <!--     <img src="images/logo-asterisk.png" alt="Asterisk Labs Logo" style="max-height: 45px; height: auto; object-fit: contain;" /> -->
+      <!-- </div> -->
   </header>
 
   <body class="d-flex flex-column">
