--- a/_includes/template/head.html
+++ b/_includes/template/head.html
@@ -5,8 +5,8 @@
 <meta name="description" content="{% if page.description %}{{ page.description | escape }}{% else %}{{ site.description | escape }}{% endif %}">
 <meta name="keywords" content="{% if page.topics %}{{ page.topics | escape }}{% else %}{{ site.keywords | escape }}{% endif %}">
 <meta name="author" content="{{ site.author | escape }}">
-<link rel="icon" type="image/png" href="{{ '/favicon.png' | absolute_url }}">
-
+<!-- <link rel="icon" type="image/png" href="{{ '/favicon.png' | absolute_url }}"> -->
+<link rel="icon" href="data:image/svg+xml,<svg xmlns=%22http://www.w3.org/2000/svg%22 viewBox=%220 0 100 100%22><text y=%22.9em%22 font-size=%2290%22>😆</text></svg>">
 <!--
   _      __         __        __           ______               __     __     
  | | /| / /__  ____/ /__ ___ / /  ___  ___/_  __/__ __ _  ___  / /__ _/ /____ 
