update title and logo

--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -8,10 +8,10 @@
     <header class="container">
       <div class="row align-items-center">
           <div class="col-auto">
-              <img src="images/laug-hsmi-logo.png" alt="Logo" style="max-width: 20vw; max-height: 200px;">
+              <img src="images/laughsmi-logo.png" alt="Logo" style="max-width: 60vw; max-height: 200px;">
           </div>
           <div class="col" style="max-width: 75w;">
-              <h1 class="display-4 section-title">LaugHSMI: Laughter, Humour, Smiles in Multimodal Interactions </h1>
+              <h1 class="display-4 section-title">LaugHSMI: Laughter, Humour, Smiles <br>in Multimodal Interactions </h1>
               <h3>
                 <!-- <img src="https://icml.cc/static/core/img/icml-navbar-logo.svg" style='max-height: 2rem;margin-right: 1rem;'/> -->
                 ICMI 2026 Workshop
